objects/TRIMEC__TRIM_Entry_Check_Setup__c.object
<CustomObject>
    <description>Object to contain all setup options for Entry Check</description>
    <fields>
        <fullName>TRIMEC__Account_CF1__c</fullName>
        <inlineHelpText>Search method for Custom Search (CF1), Examples: Site LIKE &apos;%cf1%&apos;  or SAP_No__c = &apos;cf1&apos;</inlineHelpText>
        <label>Account Custom Search 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_CF2__c</fullName>
        <description>Support for custom search for accounts using Custom key 2
Example: VRN__c like &apos;%cf2%&apos;
cf2 will be replaced with the value entered by the user in the cf2 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF2), Examples: VRN__c LIKE &apos;%cf2%&apos; or Customer_No__c = &apos;cf2&apos;</inlineHelpText>
        <label>Account Custom Search 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_CF3__c</fullName>
        <description>Support for custom search for accounts using Custom key 3
Example: VRN__c like &apos;%cf3%&apos;
cf3 will be replaced with the value entered by the user in the cf3 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF3), Examples: VRN__c LIKE &apos;%cf3%&apos; or Customer_No__c = &apos;cf3&apos;</inlineHelpText>
        <label>Account Custom Search 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_Field_List__c</fullName>
        <description>List of field used when querying the Account Object.
Default is: id, parentid, name, site, billingcity, billingpostalcode, billingstate, billingcountry, website, phone, fax, type, Owner.Name, lastmodifieddate, MatchKey__c</description>
        <inlineHelpText>List of fields to query for Accounts</inlineHelpText>
        <label>Account Field List</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_Label_Singular__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Account Table.</description>
        <inlineHelpText>Label Text to be displayed for Matched Records from the Account Table.</inlineHelpText>
        <label>Account Label (Singular)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_Label__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Account Table.</description>
        <label>Account Label (Plural)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_NoMatchKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable/enable the use of the Match Key Field on Account. Default: Enabled</description>
        <inlineHelpText>Disable/enable the use of the Match Key Field on Account. Default: Enabled</inlineHelpText>
        <label>Account No MatchKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_QScopeDynFilter__c</fullName>
        <description>Allows you to dynamically scope the search on Accounts
Example: PlantType__c like &apos;%qsa%&apos;
qsa will be replaced with the value entered by the user in the qsa input field, e.g. Production so that the search becomes:  PlantType__c like &apos;%Production%&apos;
This will let Entry Check limit the search to account records with the Plant Type containg the word &apos;Production&apos;</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;qsa&apos; or PlantType__c like &apos;%qsa%&apos;</inlineHelpText>
        <label>Account Query Scope Filter (Dynamic)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_QScopeFilter__c</fullName>
        <description>Specify Accounts to include in the search. e.g. RecordType.Name = &apos;Customers&apos;
Will let Entry Check only search the records with the Record Type of Customer.</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;Doctor&apos; or RecordType.Name != &apos;Doctor&apos; or RecordType.Name LIKE &apos;Doctor&apos;</inlineHelpText>
        <label>Account Query Scope Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Account_Score_Threshold__c</fullName>
        <defaultValue>95</defaultValue>
        <description>A value between 0 and 100 to indicate which records that should be displayed.
Only Matched records with a score higher than or equal to this value will be listed.</description>
        <label>Account Score Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Action_Page_Share_Account__c</fullName>
        <description>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</description>
        <inlineHelpText>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</inlineHelpText>
        <label>Action Page (Share)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Action_Page_Share_Contact__c</fullName>
        <description>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</description>
        <inlineHelpText>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</inlineHelpText>
        <label>Action Page (Share)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Action_Page_Share_Lead__c</fullName>
        <description>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</description>
        <inlineHelpText>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</inlineHelpText>
        <label>Action Page (Share)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Action_Page_Share_Person__c</fullName>
        <description>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</description>
        <inlineHelpText>Indicate the VF Landing page for the action link when a user request permissions to get access to a record outside his/her sharing permissions</inlineHelpText>
        <label>Action Page (Share)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__BetaON__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable Beta Features</description>
        <inlineHelpText>Enable/Disable Beta Features</inlineHelpText>
        <label>Beta ON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Check_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Check_Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Check_Leads__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Check_PersonAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to be able to create Person Accounts</description>
        <label>Check Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Classic_Theme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select layout for Entry Check Main Page, Classic or Lightning Experience, Default: False = Classic</description>
        <label>Lightning Experience Theme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Classify_Match_Result__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, entry Check will classify the matched records on a scale from 0 to 5 to indicate how well the Match result fits your data</description>
        <label>Classify Match Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_CF1__c</fullName>
        <description>Support for custom search for contacts using Custom key 1
Example: VRN__c like &apos;%cf1%&apos;
cf1 will be replaced with the value entered by the user in the cf1 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF1), Examples: VRN__c LIKE &apos;%cf1%&apos;  or Customer_No__c = &apos;cf1&apos;</inlineHelpText>
        <label>Contact Custom Search 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_CF2__c</fullName>
        <description>Support for custom search for contacts using Custom key 2
Example: VRN__c like &apos;%cf2%&apos;
cf2 will be replaced with the value entered by the user in the cf2 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;
Help Text	Search method for Custom Search (CF2), Examples: VRN__c LIKE \&apos;%cf2%\&apos; or Customer_No__c = \&apos;cf2\&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF2), Examples: VRN__c LIKE &apos;%cf2%&apos; or Customer_No__c = &apos;cf2&apos;</inlineHelpText>
        <label>Contact Custom Search 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_CF3__c</fullName>
        <description>Support for custom search for contacts using Custom key 3
Example: VRN__c like &apos;%cf3%&apos;
cf3 will be replaced with the value entered by the user in the cf1 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;
Help Text	Search method for Custom Search (CF1), Examples: VRN__c LIKE \&apos;%cf3%\&apos; or Customer_No__c = \&apos;cf3\&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF3), Examples: VRN__c LIKE &apos;%cf3%&apos; or Customer_No__c = &apos;cf3&apos;</inlineHelpText>
        <label>Contact Custom Search 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_Field_List__c</fullName>
        <description>Field list for querying Contacts (and Person Accounts)
Default is: Id, Name, FirstName, LastName, Email, Phone, Fax, MobilePhone, Account.Name, Owner.Name,  MatchKey__c</description>
        <inlineHelpText>List of fields to query for Contacts (and Person Accounts)</inlineHelpText>
        <label>Contact Field List</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_Label_Singular__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Contact Table.</description>
        <inlineHelpText>Label Text to be displayed for Matched Records from the Contact Table.</inlineHelpText>
        <label>Contact Label (Singular)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_Label__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Contact Table.</description>
        <label>Contact Label (Plural)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_NoMatchKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable/enable the use of the Match Key Field on Contact. Default: Enabled</description>
        <inlineHelpText>Disable/enable the use of the Match Key Field on Contact. Default: Enabled</inlineHelpText>
        <label>Contact No MatchKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_QScopeDynFilter__c</fullName>
        <description>Allows you to dynamically scope the search on Contacts
Example: Function__c like &apos;%qsc%&apos;
qsc will be replaced with the value entered by the user in the qsc input field, e.g. VP so that the search becomes:  Function__c like &apos;%VP%&apos;
This will let Entry Check limit the search to account records with the Plant Type containg the word &apos;Production&apos;</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;qsc&apos; or Function__c like &apos;%qsc%&apos;</inlineHelpText>
        <label>Contact Query Scope Filter (Dynamic)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_QScopeFilter__c</fullName>
        <description>Specify contacts to include in the search. e.g. RecordType.Name = &apos;Doctor&apos;
Will let Entry Check only search the records with the Record Type of Doctor.</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;Doctor&apos; or RecordType.Name != &apos;Doctor&apos; or RecordType.Name LIKE &apos;%Doctor%&apos;</inlineHelpText>
        <label>Contact Query Scope Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Contact_Score_Threshold__c</fullName>
        <defaultValue>95</defaultValue>
        <description>A value between 0 and 100 to indicate which records that should be displayed.
Only Matched records with a score higher than or equal to this value will be listed.</description>
        <label>Contact Score Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DADActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activation/Deactivation of Duplicate Account Detector (DAD). A trigger based dupe detector to identify duplicates upon creation.</description>
        <inlineHelpText>Enable to activate of Duplicate Account Detector (DAD) Trigger</inlineHelpText>
        <label>Active (DAD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DADMatchTypes__c</fullName>
        <description>Select the different Type of Matches to apply to the Dupe Account Detector (DAD)</description>
        <inlineHelpText>Select the different Type of Matches to apply to the Dupe Account Detector (DAD)</inlineHelpText>
        <label>Match Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Account Name (Fuzzy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMEC__DAD_Field__c</fullName>
        <defaultValue>&apos;TRIMEC__EC_Status__c&apos;</defaultValue>
        <description>Provide API name of account field which will be used to update with Dupe Status during the Dupe Account Detection</description>
        <inlineHelpText>Provide API name of account field which will be used to update with Dupe Status during the Dupe Account Detection (default: TRIMEC__EC_Status__c)</inlineHelpText>
        <label>Dupe Status Field (Account)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DCDActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activation/Deactivation of Duplicate Contact Detector (DCD). A trigger based dupe detector to identify duplicates upon creation.</description>
        <inlineHelpText>Enable to activate of Duplicate Contact Detector (DCD) Trigger</inlineHelpText>
        <label>Active (DCD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DCDMatchTypes__c</fullName>
        <description>Select the different Type of Matches to apply to the Dupe Contact Detector (DCD)</description>
        <inlineHelpText>Select the different Type of Matches to apply to the Dupe Contact Detector (DCD)</inlineHelpText>
        <label>Match Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Only</fullName>
                </value>
                <value>
                    <fullName>Email + First Name + Last Name</fullName>
                </value>
                <value>
                    <fullName>Email + Last Name</fullName>
                </value>
                <value>
                    <fullName>Company + First Name + Last Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMEC__DCD_Field__c</fullName>
        <defaultValue>&apos;TRIMEC__EC_Status__c&apos;</defaultValue>
        <description>Provide API name of account field which will be used to update with Dupe Status during the Dupe Contact Detection</description>
        <inlineHelpText>Provide API name of account field which will be used to update with Dupe Status during the Dupe Contact Detection (default: TRIMEC__EC_Status__c)</inlineHelpText>
        <label>Dupe Status Field (Contact)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activation/Deactivation of Duplicate Lead Detector (DLD). A trigger based dupe detector to identify duplicates upon insertion (web-to-lead, import etc.)</description>
        <inlineHelpText>Enable to activate of Duplicate Lead Detector (DLD) Trigger</inlineHelpText>
        <label>Active (DLD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDBlockSource__c</fullName>
        <description>List of Lead sources for where the duplicates identified by the Match rules will be blocked</description>
        <inlineHelpText>List of Lead sources for where the duplicates identified by the Match rules will be blocked</inlineHelpText>
        <label>Lead Sources for Blocking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>&lt;None&gt;</fullName>
                </value>
                <value>
                    <fullName>...add your own values...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDDupeStatusAccount__c</fullName>
        <defaultValue>&apos;New - Dupe Account!&apos;</defaultValue>
        <description>Entry Check Status to be set when an Account is detected as a dupe of another Account.</description>
        <inlineHelpText>Enter a Status Value to be set when an Account is detected as a dupe of another Account. If left BLANK, default value is: New - Dupe Account!</inlineHelpText>
        <label>Dupe Status (Account)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDDupeStatusContact__c</fullName>
        <defaultValue>&apos;New - Dupe Contact!&apos;</defaultValue>
        <description>Lead Status to be set when a lead is detected as a dupe of a contact.</description>
        <inlineHelpText>Enter a Lead Status to be set when a lead is detected as a dupe of a contact. If left BLANK, default value is: New - Dupe Contact!</inlineHelpText>
        <label>Dupe Status (Contact)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDDupeStatusLead__c</fullName>
        <defaultValue>&apos;New - Dupe Lead!&apos;</defaultValue>
        <description>Lead Status to be set when a lead is detected as a dupe of another Lead.</description>
        <inlineHelpText>Enter a Lead Status to be set when a lead is detected as a dupe of another Lead. If left BLANK, default value is: New - Dupe Lead!</inlineHelpText>
        <label>Dupe Status (Lead)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDMatchTypes__c</fullName>
        <description>Select the different Type of Matches to apply to the Dupe Lead Detector (DLD)</description>
        <inlineHelpText>Select the different Type of Matches to apply to the Dupe Lead Detector (DLD)</inlineHelpText>
        <label>Match Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Only</fullName>
                </value>
                <value>
                    <fullName>Email + First Name + Last Name</fullName>
                </value>
                <value>
                    <fullName>Email + Last Name</fullName>
                </value>
                <value>
                    <fullName>Company + First Name + Last Name</fullName>
                </value>
                <value>
                    <fullName>First Name + Last Name</fullName>
                </value>
                <value>
                    <fullName>First Name + Last Name + Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMEC__DLDStatusSource__c</fullName>
        <description>List of Lead sources for where the duplicates identified by the Match rules will be have the Status set to Dupe</description>
        <inlineHelpText>List of Lead sources for where the duplicates identified by the Match rules will be have the Status set to Dupe</inlineHelpText>
        <label>Lead sources for Status Change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>&lt;None&gt;</fullName>
                </value>
                <value>
                    <fullName>...add your own...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMEC__DebugON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug ON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Default_Company__c</fullName>
        <description>The value of this field will be use to auto-populate the company field, when a user decides to create a new Lead/Contact, but did not provide a company name on the Entry Check Screen</description>
        <label>Default Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Default_Email__c</fullName>
        <description>The value of this field will be use to auto-populate the email field, when a user decides to create a new Lead/Contact, but did not provide a email on the Entry Check Screen</description>
        <label>Default Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Default_FirstName__c</fullName>
        <description>The value of this field will be use to auto-populate the First Name field, when a user decides to create a new Lead/Contact, but did not provide a first name on the Entry Check Screen</description>
        <label>Default First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Default_LastName__c</fullName>
        <description>The value of this field will be use to auto-populate the last name field, when a user decides to create a new Lead/Contact, but did not provide a last name on the Entry Check Screen</description>
        <label>Default Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Enhanced_Display_DupeStatusAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control which Dupes to include in list.
Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Accounts)</description>
        <inlineHelpText>Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Accounts)</inlineHelpText>
        <label>Account Dupe Status: Include Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Enhanced_Display_DupeStatusContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control which Dupes to include in list.
Enable/Disable to Include/Exclude Leads which are duplicates of the Contact (Lead-Contact)</description>
        <inlineHelpText>Enable/Disable to Include/Exclude Leads which are duplicates of the Contact (Lead-Contact)</inlineHelpText>
        <label>Contact Dupe Status: Include Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Enhanced_Display_DupeStatusLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control which Dupes to include in list.
Enable/Disable to Include/Exclude Accounts which are duplicates of the Lead (Lead-Accounts)</description>
        <inlineHelpText>Enable/Disable to Include/Exclude Accounts which are duplicates of the Lead (Lead-Accounts)</inlineHelpText>
        <label>Lead Dupe Status: Include Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Entry_Check_VF_Page__c</fullName>
        <defaultValue>&quot;/apex/TRIMEC__DataTrim_EntryCheck&quot;</defaultValue>
        <description>URL reference for the Entry Check VF Page. Use this parameter to navigate to a custom Entry Check page:</description>
        <label>Entry Check VF Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Exclusion_List__c</fullName>
        <description>List of words to exclude in searches, common words in company names like: Consulting etc.</description>
        <inlineHelpText>List of words to exclude in searches, common words in company names like: Consulting etc.</inlineHelpText>
        <label>Exclusion List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_City__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide City Field for data entry</description>
        <inlineHelpText>Show/Hide City Field for data entry</inlineHelpText>
        <label>Hide City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Company Field for data entry</description>
        <inlineHelpText>Show/Hide Company Field for data entry</inlineHelpText>
        <label>Hide Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Convert_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Convert Button on View All page.</description>
        <inlineHelpText>Hide Convert Button on View All page.</inlineHelpText>
        <label>Hide Convert Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Country Field for data entry</description>
        <inlineHelpText>Show/Hide Country Field for data entry</inlineHelpText>
        <label>Hide Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Email Field for data entry</description>
        <inlineHelpText>Show/Hide Email Field for data entry</inlineHelpText>
        <label>Hide Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Fax Field for data entry</description>
        <inlineHelpText>Show/Hide Fax Field for data entry</inlineHelpText>
        <label>Hide Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide First Name Field for data entry</description>
        <inlineHelpText>Show/Hide First Name Field for data entry</inlineHelpText>
        <label>Hide First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Last Name Field for data entry</description>
        <inlineHelpText>Show/Hide Last Name Field for data entry</inlineHelpText>
        <label>Hide Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Merge_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide merge button on Main page. the Merge button allows you to launch the merge wizard on 2 or 3 records returned from a search result</description>
        <inlineHelpText>Hide merge button on Main page. the Merge button allows you to launch the merge wizard on 2 or 3 records returned from a search result</inlineHelpText>
        <label>Hide Merge Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Mobile Field for data entry</description>
        <inlineHelpText>Show/Hide Mobile Field for data entry</inlineHelpText>
        <label>Hide Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Phone Field for data entry</description>
        <inlineHelpText>Show/Hide Phone Field for data entry</inlineHelpText>
        <label>Hide Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Postal_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Postal Code Field for data entry</description>
        <inlineHelpText>Show/Hide Postal Code Field for data entry</inlineHelpText>
        <label>Hide Postal Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide State Field for data entry</description>
        <inlineHelpText>Show/Hide State Field for data entry</inlineHelpText>
        <label>Hide State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Street__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Street Field for data entry</description>
        <inlineHelpText>Show/Hide Street Field for data entry</inlineHelpText>
        <label>Hide Street</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Hide_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Website Field for data entry</description>
        <inlineHelpText>Show/Hide Website Field for data entry</inlineHelpText>
        <label>Hide Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__InvokeNewAccountUrl__c</fullName>
        <label>New Account Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__InvokeNewContactUrl__c</fullName>
        <label>New Contact Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__InvokeNewLeadUrl__c</fullName>
        <label>New Lead Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__InvokeNewPersonUrl__c</fullName>
        <label>New Person Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_CF1__c</fullName>
        <description>Support for custom search for contacts using Custom key 1
Example: VRN__c like &apos;%cf1%&apos;
cf1 will be replaced with the value entered by the user in the cf1 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF1), Examples: VRN__c LIKE &apos;%cf1%&apos;  or Customer_No__c = &apos;cf1&apos;</inlineHelpText>
        <label>Lead Custom Search 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_CF2__c</fullName>
        <description>Support for custom search for leads using Custom key 1
Example: VRN__c like &apos;%cf2%&apos;
cf2 will be replaced with the value entered by the user in the cf2 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF2), Examples: VRN__c LIKE &apos;%cf2%&apos; or Customer_No__c = &apos;cf2&apos;</inlineHelpText>
        <label>Lead Custom Search 2</label>
        <type>TextArea</type>
    </fields>
</CustomObject>